--- a/src/components/Browse/Banner/Banner.module.css
+++ b/src/components/Browse/Banner/Banner.module.css
@@ -12,7 +12,7 @@
   top:0;
   left:0;
   width: 100%;
-  height: 96%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
@@ -47,23 +47,28 @@
 }
 
 .btn {
-  padding: 14px 60px;
+  padding: 14px 30px;
+  width:10em;
   font-size: 1.1rem;
   font-weight: 700;
-  margin-left: 4vw;
-  margin-right: 0.4rem;
-  margin-bottom: 4.5rem;
+  margin:0 0.4rem 4.5rem 4vw;
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  display: inline-block;
   display: flex;
   align-items: center;
-  position: relative;
+  justify-content: center;
   z-index:10;
 }
+.btn:disabled{
+  cursor: not-allowed;
+  background: hsl(357, 92%, 29%);
+}
+.btn:disabled:hover{
+  background: hsl(357, 92%, 29%);
+}
 button span {
-  margin-right: 5px;
+  margin-right: 6px;
 }
 .btn-primary:hover,
 .btn-primary:focus {
@@ -77,7 +82,7 @@ button span {
 .btn-secondary {
   color: #f2f2f2;
   background-color: rgba(37, 40, 42, 0.7);
-  padding: 11.5px 50px;
+  padding: 11px 30px;
 }
 .btn-secondary:hover,
 .btn-secondary:focus {
@@ -91,7 +96,6 @@ button span {
 @media screen and (max-width: 600px) {
   .btn {
     padding: 12px 10px;
-    width: 125px;
     margin-bottom: 3rem;
     margin-right: 2px;
     margin-left: 2px;
@@ -99,7 +103,6 @@ button span {
   .btn-primary {
     margin-left: 10vw;
     margin-right: 15px;
-    padding: 13px 10px 13px 20px;
     padding-top: 17px;
   }
 }
@@ -122,15 +125,25 @@ button span {
   }
   .btn {
     padding: 12px 10px;
-    width: 125px;
+    width:9.5em;
+    font-size: 1rem;
     margin-bottom: 3rem;
     margin-right: 2px;
     margin-left: 2px;
   }
   .btn-primary {
-    margin-left: 18vw;
+    margin-left: 15vw;
     margin-right: 15px;
-    padding: 13px 10px 13px 20px;
     padding-top: 17px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .btn-primary{
+    margin-left: 10vw;
+  }
+  .title {
+    padding-top: 30vw;
+    text-align: center;
+    margin-left: 0;
   }
 }
