--- a/src/components/Browse/MovieDetails/MovieDetails.module.css
+++ b/src/components/Browse/MovieDetails/MovieDetails.module.css
@@ -13,9 +13,8 @@
   width: 78vw;
   display: block;
   object-fit: cover;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  margin: 0 auto;
+  border-radius: 3px;
+  margin: 5px auto;
 }
 .wishlist {
   font-size: 1.3rem;
