--- a/src/components/Browse/MyList/ListPage.module.css
+++ b/src/components/Browse/MyList/ListPage.module.css
@@ -27,10 +27,13 @@ h2 {
   font-size: 1.6rem;
   font-weight: 400;
   font-style: normal;
+  margin-bottom: 10px;
 }
 .empty-list h4{
   font-size: 2rem;
   font-weight: 400;
+  margin-bottom: 10px;
+  line-height: 2;
 }
 .empty-list a{
   color:hsl(31, 96%, 49%);
