refactor: rearrange folder structure

--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -122,8 +122,7 @@
   transition: opacity 250ms ease;
   will-change: opacity;
 }
-.load:hover::after,
-.load:focus::after{
+.load:hover::after{
   opacity:1;
 }
 
