--- a/src/components/Authentication/LogIn.module.css
+++ b/src/components/Authentication/LogIn.module.css
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   height: 105vh;
   width: 100%;
-  opacity: 90%;
+  opacity: 1;
   padding-top: 2rem;
   display: grid;
   place-items: center;
@@ -27,8 +27,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: -5;
+  background: rgba(0, 0, 0, 0.65);
+  z-index: 1;
 }
 .logo {
   position: fixed;
