--- a/src/components/Header/Search.module.css
+++ b/src/components/Header/Search.module.css
@@ -1,11 +1,14 @@
 .search {
   padding-right: 35px;
+  position: relative;
 }
 .search__btn{
     background: transparent;
     border:none;
     cursor: pointer;
-    margin-left:14px;
+    position: absolute;
+    right: 35px;
+    top: 5px;
 }
 .input{
     font-size: 1.15rem;
@@ -15,16 +18,23 @@
     border:none;
     border-radius: 4px;
     box-shadow:3px 3px 5px 2px rgba(0,0,0,0.2);
-    transition: 700ms;
+    transition: 500ms;
+    transition: transform 700ms ease;
+    will-change: opacity,transform;
     padding-left:10px;
-
+    transform: scaleX(0.1);
+    opacity:0;
+    transform-origin: 100% 50%;
+    position: relative;
 }
-.input:hover,
+
 .input:focus{
     color:white;
     background: rgba(212, 211, 211, 0.61);
     outline:none;
     box-shadow:3px 3px 3px 2px rgba(0,0,0,0.5);
+    transform: scaleX(1);
+    opacity:1;
 }
 ::placeholder{
     color:rgb(70, 70, 70);
@@ -40,7 +50,10 @@
         padding-right: 20px;
     }
     .input{
-        width:10rem;
+        width:12rem;
+    }
+    .search__btn{
+        right: 18px;
     }
 }
 
@@ -50,10 +63,19 @@
         padding-left: 0;
     }
     .search__btn{
-        margin-left: 4px;
+        right: 5px;
     }
     .input{
-        width:7rem;
+        width:9rem;
         font-size: 1rem;
     }
 }
+@media screen and (max-width: 480px) {
+    .input{
+        width:7rem;
+    }
+    .search__btn{
+        right: 3px;
+        transform: skew(-30deg,30deg);
+    }
+ }
