--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -194,7 +194,9 @@
   .load {
     margin: 0.5rem 45%;
   }
-  
+  .load:hover::after{
+    opacity:0;
+  }  
 }
 @media screen and (max-width: 425px) {
   .poster {
