--- a/src/components/MyList/ListPage.module.css
+++ b/src/components/MyList/ListPage.module.css
@@ -60,7 +60,7 @@ h2 {
     letter-spacing: 1px;
   }
   .list {
-    padding-left: 5px;
+    padding-left: min(100px, 10vw);
   }
   .empty-list h3{
     font-size: 1.5rem;
