--- a/src/components/SearchMovie/DisplaySearchResults.module.css
+++ b/src/components/SearchMovie/DisplaySearchResults.module.css
@@ -25,8 +25,10 @@
   color:white;
   font-size: 1.7rem;
   margin-top: 3.5rem;
+  margin-top: 70px;
   padding-top: 20px;
   padding-left: min(100px, 10vw);
+  padding-left: 80px;
   font-weight: 400;
   transform: skew(-20deg, 0);
 }
@@ -40,7 +42,6 @@
 }
 @media screen and (max-width: 480px) {
   .browse {
-    padding-left: 30px;
     margin-top: 1rem;
   }
   .browse > * {
@@ -49,6 +50,7 @@
   .title{
     font-size: 1.3rem;
     margin-bottom: 0;
+    padding-left: 30px;
   }
   .query{
     font-size: 1.4rem;
