--- a/src/components/Header/Navigation.module.css
+++ b/src/components/Header/Navigation.module.css
@@ -1,6 +1,6 @@
 .nav {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  color: white;
+  color: hsl(0, 0%, 100%);
   height: 70px;
   width: 100%;
   background-image: linear-gradient(
@@ -55,12 +55,12 @@
 .signout__button a {
   font-size: 1rem;
   letter-spacing: 1.3px;
-  color: white;
+  color: hsl(0, 0%, 100%);
 }
 
 .nav__fixed {
-  background: hsla(0, 0%, 7%, 0.8);
-  color: white;
+  background: hsl(0, 0%, 7%);
+  color: hsl(0, 0%, 100%);
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   height: 4.5rem;
   width: 100%;
@@ -93,7 +93,6 @@ a.active h2 {
 }
 
 .search {
-  /* margin-top: 1.6rem; */
   padding-right: 12px;
 }
 
