--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -1,7 +1,7 @@
 .container {
   font-family: "Roboto", sans-serif;
   color: white;
-  width: 100%;
+  width: 78vw;
   overflow-y: scroll;
   overflow-x: hidden;
   background: #141414;
@@ -15,6 +15,7 @@
   object-fit: cover;
   border-radius: 3px;
   margin: 5px auto;
+  overflow-x: hidden;
 }
 .wishlist {
   font-size: 1.3rem;
@@ -126,6 +127,15 @@
   opacity:1;
 }
 
+.error{
+  font-size: 1.8rem;
+  color:hsl(0, 0%, 98%);
+  margin-top: 8rem;
+  padding-top: 50px;
+  font-weight: 500;
+  text-align: center;
+}
+
 @media screen and (max-width: 930px) {
   .details {
     flex-direction: column;
@@ -142,11 +152,13 @@
 }
 @media screen and (max-width: 768px) {
   .container {
-    max-width: 100%;
+    width: 100%;
+    width: 89vw;
+    margin: 0;
+    padding: 0;
   }
   .poster {
     width: 100%;
-    /* height: 14rem; */
     height:40%;
     object-fit: cover;
   }
@@ -154,6 +166,7 @@
 @media screen and (max-width: 480px) {
   .container {
     width: 100%;
+    margin:0;
   }
   .poster {
     width: 100%;
@@ -196,7 +209,11 @@
   }
   .load:hover::after{
     opacity:0;
-  }  
+  }
+  
+  .error{
+    font-size: 1.4rem;
+  }
 }
 @media screen and (max-width: 425px) {
   .poster {
