--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -14,7 +14,7 @@
     position: absolute;
     top:1vw;
     left:10vw;
-    width:80vw;
+    width:78vw;
     height:95%;
     z-index:35;
     overflow-y:scroll;
@@ -36,16 +36,19 @@
 }
 @media screen and (max-width: 768px) {
   .overlay {
-    /* width: 94vw; */
-    overflow-x: hidden;
+    width: 89vw;
+    /* overflow-x: hidden; */
+    left:5vw;
+    right:5vw;
+    height:100%;
     display: block;
-    margin: 0 3vw;
   }
 }
 @media screen and (max-width: 480px){
   .overlay{
-    left:0;
-    width:97vw;
+    left:1vw;
+    right:1vw;
+    width:98vw;
     padding-left: 2px;
     margin-left: 0;
   }
