--- a/src/components/UI/LoadingSpinner.module.css
+++ b/src/components/UI/LoadingSpinner.module.css
@@ -5,7 +5,7 @@
 .section div {
   position: absolute;
   top: 50%;
-  left: 40%;
+  left: 45%;
   height: 6rem;
   width: 6rem;
   border: 2px solid red;
@@ -30,4 +30,10 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+@media screen and (max-width: 768px) {
+.section div {
+  left: 40%;
+}
 }
