--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -1,6 +1,5 @@
 .backdrop{
     position: absolute;
-    /* inset:0; */
     top:0;
     left:0;
     height: 100%;
@@ -21,9 +20,9 @@
 }
 
 .close-button {
-  background: #3c2d2e9c;
+  background: hsla(0, 5%, 24%, 0.8);
   border-radius: 50%;
-  border: 1px solid white;
+  border: 1px solid hsl(0, 0%, 100%);
   padding: 8px 10px;
   position: absolute;
   top: 2%;
@@ -32,7 +31,7 @@
   cursor: pointer;
 }
 .close-button:hover {
-  background: #c7bebf88;
+  background: hsla(0, 0%, 100%, 0.3);
 }
 @media screen and (max-width: 768px) {
   .overlay {
