--- a/src/components/Authentication/InputPasswordField.module.css
+++ b/src/components/Authentication/InputPasswordField.module.css
@@ -14,6 +14,7 @@
   color: hsl(0, 0%, 94%);
   margin: 0.3rem auto;
   border-radius: 5px;
+  padding: 10px;
 }
 .password:focus,
 .password:hover {
