--- a/src/components/Authentication/LogIn.module.css
+++ b/src/components/Authentication/LogIn.module.css
@@ -1,11 +1,13 @@
-.container {
+*{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+.container {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 105vh;
+  min-height: 105vh;
   width: 100%;
   opacity: 1;
   padding-top: 2rem;
@@ -33,15 +35,16 @@
 }
 
 .input__form {
-  width: 37vw;
+  width: 41vw;
   background: rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  padding: 3rem 1.5rem 1.5rem 1.5rem;
   border-radius: 5px;
   position: relative;
   z-index: 10;
+  margin-bottom: 1rem;
 }
 
 .heading {
@@ -63,7 +66,7 @@
   border: 1px solid hsla(0, 0%, 9%, 0.74);
   background-color: hsla(0, 0%, 9%, 0.74);
   color: hsl(0, 0%, 94%);
-  margin: 0.7rem 0;
+  margin: 13px 0 5px 0;
   border-radius: 5px;
   padding: 10px;
 }
