--- a/src/components/Authentication/LogIn.module.css
+++ b/src/components/Authentication/LogIn.module.css
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  min-height: 105vh;
+  min-height: 100vh;
   width: 100%;
   opacity: 1;
   padding-top: 2rem;
@@ -35,7 +35,7 @@
 }
 
 .input__form {
-  width: 41vw;
+  width: max(470px,17vw);
   background: rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
@@ -218,7 +218,7 @@ a:focus {
 
 @media screen and (max-width: 768px) {
   .input__form {
-    width: min(400px, 70vw);
+    width: max(450px, 55vw);
   }
   .input {
     min-height: 2rem;
@@ -228,7 +228,7 @@ a:focus {
 
 @media screen and (max-width: 480px) {
   .input__form {
-    max-width: 98vw;
+    width: 98vw;
   }
   .btn__primary,
   .btn__secondary {
