--- a/src/components/Browse/OneGenre.module.css
+++ b/src/components/Browse/OneGenre.module.css
@@ -13,11 +13,11 @@ h2 {
 .genre {
   display: flex;
   flex-wrap: wrap;
-  padding-left: min(100px,10vw);
+  padding-left: min(50px,2.5vw);
   padding-top: 1rem;
 }
 .genre>*{
-  margin:20px 10px 10px 0;
+  margin:20px 5px 10px 0;
 }
 .error{
   font-size: 1.8rem;
@@ -26,6 +26,21 @@ h2 {
   padding-top: 50px;
   font-weight: 500;
   text-align: center;
+}
+@media screen and (max-width: 860px) {
+  .genre {
+    padding-left: min(50px,6vw);
+  }
+}
+@media screen and (max-width: 768px) {
+  .genre {
+    padding-left: min(50px,5vw);
+  }
+}
+@media screen and (max-width: 650px) {
+  .genre {
+    padding-left: min(60px,8vw);
+  }
 }
 @media screen and (max-width: 480px) {
   .header {
